HOF overflow fix and linking to HOF from Navbar

--- a/HOFame.css
+++ b/HOFame.css
@@ -82,7 +82,6 @@
 }
 @media screen and (max-width: 600px) {
   .cards-container {
-    width: 100%;
     display: block;
     margin-bottom: 20px;
   }
@@ -90,7 +89,6 @@
 
 @media screen and (max-width: 500px) {
   .student-names-container {
-    width: 100%;
     display: block;
     margin-bottom: 20px;
   }
